crates/rusvelte-parser/tests/attributes/snapshots/snapshot__attributes__success@attribute-style-directive-modifiers.svelte.snap
---
source: crates/rusvelte-parser/tests/attributes/mod.rs
expression: root
input_file: crates/rusvelte-parser/tests/attributes/inputs/attribute-style-directive-modifiers.svelte
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 43,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "RegularElement",
        "start": 0,
        "end": 43,
        "name": "div",
        "attributes": [
          {
            "type": "StyleDirective",
            "start": 5,
            "end": 36,
            "name": "color",
            "value": {
              "type": "ExpressionTag",
              "start": 27,
              "end": 36,
              "expression": {
                "type": "Identifier",
                "start": 28,
                "end": 35,
                "name": "myColor"
              }
            },
            "modifiers": [
              "important"
            ]
          }
        ],
        "fragment": {
          "type": "Fragment",
          "nodes": []
        }
      }
    ]
  },
  "module": null,
  "instance": null
}
